# quasiplanar_enumerator

./: .gitignore  CMakeLists.txt  K11_minus_4.cpp  README.md  compile.sh  drawing_from_json.cpp  enumeration.cpp  hds_3_planar.h  hds_kplanar.h  hds_quasiplanar.h  iso.h  maxQuasiCandidateTester.cpp  maximalQuasiplaneCandidateTester.cpp  minGlobalCrossing.cpp  starTester.cpp  starVerifyMax.cpp  triTester.cpp
jsons/: K9_original.json  test_drawing.json
